# KaniDivert

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
dll/: windivert.c  windivert_hash.c
include/: windivert.h  windivert_device.h
src/: windivert.c  windivert_helper.c  windivert_shared.c
sys/: windivert.c
